--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">First Delivery</a>
+          <a class="nav-link" href="FirstDelivery.pdf">First Delivery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Product Interface</a>
