Add table and screenshot

--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="stylesheets/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="https://marvelapp.com/2e043ed">
             Marvel App
           </a>
         </li>
@@ -42,14 +43,17 @@
 
   </header>
   <div class="main d-flex flex-column justify-content-center">
-        <h1>Dogmatic™</h1>
-        <h2>Not just automatic, Dogmatic</h2>
-  </div>
-  <section>
+    <h1>Dogmatic™</h1>
+    <h2>Not just automatic, Dogmatic</h2>
+
     <div class="container">
-      <div class="card m-5">
-        <div class="row">
-          <div class="col-md-6">
+
+      <div class="row">
+        <div class="col col-12 col-md-6">
+          <div class="card mt-5">
+
+            <img class="card-img-top" src="images/bigbowl.jpg" alt="Dog with lots of food" />
+
             <div class="card-block">
 
               <p class="card-text">Taking care of a pet can be a really difficult and time-consuming task. Worrying about whether or not your
@@ -59,15 +63,46 @@
 
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card-img-bottom">
-            </div>
-          </div>
+
+        </div>
+        <div class="col mt-5 col-12 col-md-6 iphone-screen">
+          <img class="img-fluid " src="images/iphonescreen.png" alt="Dogmatic Prototype" />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <table class="table">
+            <tr>
+              <th></th>
+              <th>Requirements</th>
+              <th> Description</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Quick</td>
+              <td> Fast and easy to use and understand. That means, have all the necessary buttons accessible.</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Simple</td>
+              <td>It won´t have a lot of information to overwhelm the user. It will only have essential buttons, and a menu to
+                organize additional information.</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Attractive</td>
+              <td>It will have uniform colors to look elegant and friendly and also some icons for the user to find things easily.</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td> Dog Themed</td>
+              <td> So that it maintains the purpose of the product.</td>
+            </tr>
+
+          </table>
         </div>
       </div>
     </div>
-  </section>
-  </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
