Add main app interface

--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="FirstDelivery.pdf">First Delivery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Product Interface</a>
+          <a class="nav-link" href="maininterface.html">Product Interface</a>
         </li>
 
       </ul>
