Remove card border

--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -50,11 +50,11 @@
 
       <div class="row">
         <div class="col col-12 col-md-6">
-          <div class="card mt-5">
+          <div class="card mt-5 border-0">
 
             <img class="card-img-top" src="images/bigbowl.jpg" alt="Dog with lots of food" />
 
-            <div class="card-block">
+            <div class="card-block mt-5">
 
               <p class="card-text">Taking care of a pet can be a really difficult and time-consuming task. Worrying about whether or not your
                 pet has eaten can cause unnecessary stress. </p>
