--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -6,6 +6,7 @@
   <title>Dogmatic</title>
   <link rel="stylesheet" href="stylesheets/cssreset.css" />
   <link rel="stylesheet" href="stylesheets/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous" />
