--- a/landingHTML/maininterface.html
+++ b/landingHTML/maininterface.html
@@ -4,18 +4,22 @@
   <meta charset="utf=8">
   <title>Main Interface</title>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
 </head>
 
 <style>
 
 body{
   margin: 0;
+
 }
 
 #Wrapper{
   width: 100%;
   height: 100%;
   overflow: hidden;
+
 }
 
 .logo{
@@ -40,13 +44,13 @@ body{
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     border: 12px;
-    border-left: solid deepskyblue;
-    border-right: solid deepskyblue;
+    /*border-left: solid deepskyblue;
+    border-right: solid deepskyblue;*/
 
 }
 
 table{
-  font-family:  'Quicksand', sans-serif;
+  font-family:  'Roboto', sans-serif;
   height: 50%;
   width: 50%;
   top: 50%;
@@ -62,7 +66,7 @@ table td{
 
 table th{
   text-align: center;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 27px;
 }
 
@@ -70,7 +74,7 @@ table th{
   background-color: dimgray;
   border: none;
   color: white;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   height: 35px;
   width: 80px;
@@ -79,7 +83,7 @@ table th{
 }
 
 .insert{
-  font-family:  'Quicksand', sans-serif;
+  font-family:  'Roboto', sans-serif;
   font-weight: 400;
   text-align: center;
   width: 200px;
@@ -93,10 +97,10 @@ table th{
 <body>
 <div id="Wrapper">
 
-  <img class="background" src="images/fondo.png">
+  <img class="background" src="fondo.png">
 
 <div id="rectangle">
-  <img class="logo" src = "images/dogmatic-logo.png" alt= "Dogmatic Logo">
+  <img class="logo" src = "Logo-Dogmatic.png" alt= "Dogmatic Logo">
     <table >
       <tr>
         <th>Username</th>
