Fix image references

--- a/landingHTML/maininterface.html
+++ b/landingHTML/maininterface.html
@@ -97,10 +97,10 @@ table th{
 <body>
 <div id="Wrapper">
 
-  <img class="background" src="fondo.png">
+  <img class="background" src="./images/background.png">
 
 <div id="rectangle">
-  <img class="logo" src = "Logo-Dogmatic.png" alt= "Dogmatic Logo">
+  <img class="logo" src = "./images/dogmatic-logo.png" alt= "Dogmatic Logo">
     <table >
       <tr>
         <th>Username</th>
