--- a/landingHTML/maininterface.html
+++ b/landingHTML/maininterface.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf=8">
   <title>Main Interface</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
