--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="FirstDelivery.pdf">First Delivery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="maininterface.html">Product Interface</a>
+          <a class="nav-link" href="./app/index.html">Product Interface</a>
         </li>
 
       </ul>
