--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -34,6 +34,9 @@
           <a class="nav-link" href="FirstDelivery.pdf">First Delivery</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="dogmaticevaluation.pdf">Evaluations</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="./app/index.html">Product Interface</a>
         </li>
 
