--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -12,6 +12,15 @@
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44000145-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-44000145-3');
+  </script>
 </head>
 
 <body>
