--- a/landingHTML/index.html
+++ b/landingHTML/index.html
@@ -12,6 +12,7 @@
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44000145-3"></script>
   <script>
@@ -95,6 +96,11 @@
         <div class="col mt-5 col-12 col-md-6 iphone-screen">
           <img class="img-fluid " src="images/iphonescreen.png" alt="Dogmatic Prototype" />
         </div>
+      </div>
+      <div id="DogmaticVideo">
+        <video width="1080" height="auto" controls poster="images/thum.png">
+          <source src="Dogmatic.mp4" type="video/mp4" >
+        </video>
       </div>
       <div class="row mt-5">
         <div class="col">
