--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44000145-3"></script>
   <script>
@@ -23,17 +23,19 @@
     gtag('config', 'UA-44000145-3');
   </script>
 
-    <!-- Begin Inspectlet JS Code -->
+  <!-- Begin Inspectlet JS Code -->
   <script type="text/javascript" id="inspectletjs">
-  (function() {
-  var insp_ab_loader = true; // set this boolean to false to disable the A/B testing loader
-  window.__insp = window.__insp || [];
-  __insp.push(['wid', 1678483216]);
-  var ldinsp = function(){
-  if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1678483216&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x);if(typeof insp_ab_loader != "undefined" && insp_ab_loader){ var adlt = function(){ var e = document.getElementById('insp_abl'); if(e){ e.parentNode.removeChild(e); __insp.push(['ab_timeout']); }}; var adlc = "body{ visibility: hidden !important; }"; var adln = typeof insp_ab_loader_t != "undefined" ? insp_ab_loader_t : 1200; insp.onerror = adlt; var abti = setTimeout(adlt, adln); window.__insp_abt = abti; var abl = document.createElement('style'); abl.id = "insp_abl"; abl.type = "text/css"; if(abl.styleSheet) abl.styleSheet.cssText = adlc; else abl.appendChild(document.createTextNode(adlc)); document.head.appendChild(abl);
-  } };
-  setTimeout(ldinsp, 0);
-  })();
+    (function () {
+      var insp_ab_loader = true; // set this boolean to false to disable the A/B testing loader
+      window.__insp = window.__insp || [];
+      __insp.push(['wid', 1678483216]);
+      var ldinsp = function () {
+        if (typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1678483216&r=' + Math.floor(new Date().getTime() / 3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); if (typeof insp_ab_loader != "undefined" && insp_ab_loader) {
+          var adlt = function () { var e = document.getElementById('insp_abl'); if (e) { e.parentNode.removeChild(e); __insp.push(['ab_timeout']); } }; var adlc = "body{ visibility: hidden !important; }"; var adln = typeof insp_ab_loader_t != "undefined" ? insp_ab_loader_t : 1200; insp.onerror = adlt; var abti = setTimeout(adlt, adln); window.__insp_abt = abti; var abl = document.createElement('style'); abl.id = "insp_abl"; abl.type = "text/css"; if (abl.styleSheet) abl.styleSheet.cssText = adlc; else abl.appendChild(document.createTextNode(adlc)); document.head.appendChild(abl);
+        }
+      };
+      setTimeout(ldinsp, 0);
+    })();
   </script>
   <!-- End Inspectlet JS Code -->
 </head>
@@ -97,10 +99,8 @@
           <img class="img-fluid " src="images/iphonescreen.png" alt="Dogmatic Prototype" />
         </div>
       </div>
-      <div id="DogmaticVideo">
-        <video width="1080" height="auto" controls poster="images/thum.png">
-          <source src="Dogmatic.mp4" type="video/mp4" >
-        </video>
+      <div class="embed-responsive embed-responsive-16by9 mt-4">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R7zNLt5TAdA" allowfullscreen></iframe>
       </div>
       <div class="row mt-5">
         <div class="col">
