--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <title>Dogmatic</title>
-  <link rel="stylesheet" href="stylesheets/cssreset.css" />
-  <link rel="stylesheet" href="stylesheets/styles.css" />
+  <link rel="stylesheet" href="css/cssreset.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,700" rel="stylesheet" />
+  <link rel="stylesheet" href="css/blueimp-gallery.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44000145-3"></script>
@@ -135,14 +136,46 @@
           </table>
         </div>
       </div>
+      <div class="row mt-5">
+        <div class="col">
+          <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
+          <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+          </div>
+          <div id="links">
+            <a href="images/analytics1.png" title="Google Analytics">
+            </a>
+            <a href="images/analytics2.png" title="Google Analytics">
+            </a>
+            <a href="images/inspectelet1.png" title="Inspectlet Heatmap">
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <!-- blueimp gallery -->
+    <script src="js/blueimp-gallery.min.js"></script>
+    <script>
+      blueimp.Gallery(
+        document.getElementById('links').getElementsByTagName('a'),
+        {
+          container: '#blueimp-gallery-carousel',
+          carousel: true
+        }
+      );
+    </script>
+    <!-- End blueimp gallery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
